fixed wrap

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
   overflow-x: hidden; }
 
 .visor {
-  height: 100vh;
+  height: 100%;
   display: flex;
   position: relative;
   left: 0; }
 
 .databoard {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   flex-shrink: 0;
   overflow-x: hidden; }
 
@@ -40,7 +40,7 @@
   font-size: 48px;
   font-weight: 900;
   color: #ffffff;
-  min-height: 80%;
+  height: 100%;
   margin: 0 auto; }
 
 .day__container {
