--- a/src/styles/components/_calendar.scss
+++ b/src/styles/components/_calendar.scss
@@ -7,7 +7,7 @@
   font-size: $xx_large;
   font-weight: $bold;
   color: $numbers;
-  min-height: 80%;
+  height: 100%;
   margin: 0 auto;
 }
 .day__container {
