--- a/src/styles/core/_mixings.scss
+++ b/src/styles/core/_mixings.scss
@@ -4,15 +4,15 @@
 }
 
 .visor {
-  height: 100vh;
+  height: 100%;
   display: flex;
   position: relative;
   left: 0;
 }
 
 .databoard {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   flex-shrink: 0;
   overflow-x: hidden;
 }
